src/objects/Ludus_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Compare_Date_Field__c</fullName>
        <label>Compare Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Date_Value__c</fullName>
        <label>Compare Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compare_Field_Value__c</fullName>
        <label>Compare Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Numeric_Field__c</fullName>
        <label>Compare Numeric Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Numeric_Value__c</fullName>
        <label>Compare Numeric Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                    <default>true</default>
                    <label>Equals</label>
                </value>
                <value>
                    <fullName>Less Than</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Rule__c</fullName>
        <label>Type of Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                    <default>true</default>
                    <label>Picklist</label>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Awarded__c</fullName>
        <label>User Awarded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ludus Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Rule__c</columns>
        <columns>Object__c</columns>
        <columns>Field__c</columns>
        <columns>Operator__c</columns>
        <columns>Compare_Field_Value__c</columns>
        <columns>Points__c</columns>
        <columns>User_Awarded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ludus Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ludus Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>